# codex_test

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docs/: integrations.md  streaming-poc.md
src/: __init__.py
src/agents/: __init__.py  example.py
src/shared/: __init__.py
src/streaming/: __init__.py  main.py  producer.py
tests/: __init__.py  conftest.py
tests/agents/: test_example.py
tests/streaming/: test_producer.py
